[package]
name = "attention"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
eframe = "0.32.0"
egui = "0.32.0"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
lofty = "0.22.4"
rfd = "0.15.4"
rodio = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
